# RocksGraph

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  justfile
.claude/: add_license_header.sh  settings.json
.github/workflows/: ci.yml
config/: bench.toml  server.toml
docs/: DESIGN_TEMPLATE.md  TODO.md  codebase_assessment.md  design_auto_schema.md  design_concurrent_pressure.md  design_degree_step.md  design_edge_id_string.md  design_explain_step.md  design_filter_reordering.md  design_group_step.md  design_in_memory_backend.md  design_integer_type_policy.md  design_multiple_edges.md  design_new_data_types.md  design_principles.md  design_repeat_until_emit.md  design_reserved_keys.md  design_scan_and_batch_api.md  design_selective_property_encoding.md  design_vertex_label.md  design_vertex_label_optimization.md  design_widen_label_id.md  design_with_properties.md  future_optimizations_buffered_step.md  known_issue_rocksdb_scan_hang.md  public_release_checklist.md
examples/: basic_usage.rs  composition_and_deletion.rs  explain_plan.rs  schema_and_edge_modes.rs  traversal_and_filtering.rs
scripts/: bench_integrity.sh  bench_read.sh  bench_write.sh  coverage.sh  instruments_read.sh  instruments_write.sh  prepare_bench_data.sh  start_server.sh  status_server.sh  stop_server.sh  test_scripts.sh
src/: api.rs  concurrency_tests.rs  graph.rs  lib.rs  main.rs
src/client/: gremlin_client.rs  mod.rs
src/engine/: context.rs  gremlin_to_logical_plan.rs  group_id.rs  mod.rs  traverser.rs
src/engine/data_flow/: message.rs  mod.rs
src/engine/data_flow/steps/: has_property.rs  in_e.rs  mod.rs  out_e.rs  traits.rs  vec_source.rs  where_exit.rs
src/engine/logical_step/: mod.rs
src/engine/volcano/: builder.rs  mod.rs
src/graph/: config.rs  existence.rs  helpers.rs  logical.rs  mod.rs  snapshot.rs  tests.rs
src/gremlin/: client.rs  config.rs  conversions.rs  mod.rs  multi_edge_tests.rs  test_utils.rs  tests.rs  traversal.rs  type_bridge.rs  value.rs
src/gremlin/traversal/: built.rs  mod.rs  terminals.rs
src/optimizer/: extract_end_vertex_filter.rs  merge_adde_ids.rs  merge_addv_id.rs  merge_end_vertex_filter.rs  merge_v_id_filter.rs  mod.rs  push_down_id_filter.rs
src/planner/: gremlin_to_logical_plan.rs  mod.rs
src/planner/logical_step/: mod.rs
src/planner/optimizer/: degree_pushdown.rs  extract_end_vertex_filter.rs  merge_adde_ids.rs  merge_addv_id.rs  merge_end_vertex_filter.rs  merge_haslabel_into_edge.rs  merge_property_into_add.rs  merge_v_id_filter.rs  mod.rs  normalize_inv_outv.rs  reorder_filter.rs
src/schema/: definition.rs  index.rs  management.rs  mod.rs  tests.rs
src/server/: bench.rs  bytecode_deserializer.rs  gremlin_server.rs  integration_tests.rs  mod.rs  result_serializer.rs  test_utils.rs
src/store/: mod.rs  traits.rs
src/store/distributed/: mod.rs
src/store/rocks/: admin.rs  encoding.rs  graph.rs  mod.rs  snapshot.rs  store.rs  transaction.rs
src/types/: element.rs  error.rs  gvalue.rs  keys.rs  label.rs  mod.rs  prop_codec.rs  prop_key.rs  tests.rs
(+74 files in other folders)
