[package]
authors = ["Austin Han <austinhan1024@gmail.com>"]
description = "A Gremlin-inspired property graph query engine written in Rust, backed by RocksDB"
edition = "2021"
license = "GPL-2.0-or-later"
name = "rocksgraph"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/austinhan/rocksgraph"
keywords = ["graph", "gremlin", "rocksdb", "database"]
categories = ["database-implementations", "data-structures"]

[features]
# Enable RocksDB statistics collection. Adds ~5-10% overhead on every storage
# operation (atomic counter increments). Use only for profiling/diagnostics.
rocksdb-stats = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# Compact inline strings (≤22 bytes stack-allocated)
smol_str = "0.2"

# Ordered hash map — preserves insertion order, needed for GValue::Map
# Pinned to 2.1.x — the 2.2+ series adopted edition 2024 which needs rustc ≥ 1.85
indexmap = "=2.1.0"

# LRU cache for SharedStoreCache
lru = "0.12"

# RwLock used for SharedStoreCache shards
parking_lot = "0.12"

# Inline vec for Traverser labels: stack-allocates ≤2 label strings with no heap
smallvec = "1"

# RocksDB storage backend
rocksdb = "0.22"

# Bidirectional hash map — used by Schema for label_id ↔ label_string lookup
bimap = "0.6"

# tokio tasks
tokio = { version = "1.52.3", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
async-trait = "0.1.89"
futures-util = "0.3.32"
tempfile = "3"
rand = "0.8"
hdrhistogram = "7.5.4"

[dev-dependencies]
# tempfile is already inherited from [dependencies] above


[profile.release]
debug = true
